# calculate-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  VIBES.md  VIBES_SUMMARY.md  development_log.md  development_log_refactoring.md
src/: compute.pest  lib.rs
tests/: adversarial_tests.rs  ast_tests.rs  batch_tests.rs  evaluation_tests.rs  expression_tests.rs  integration_tests.rs  parsing_tests.rs  property_tests.proptest-regressions  property_tests.rs  proptest_adversarial.proptest-regressions  proptest_adversarial.rs  tests.proptest-regressions  tests.rs
