[package]
name = "compute-mcp"
version = "0.1.0"
edition = "2021"
description = "Minimal arithmetic MCP server for blog example"

[[bin]]
name = "stdio_direct"
path = "src/bin/stdio_direct.rs"

[[bin]]
name = "compute"
path = "src/bin/compute.rs"

[dependencies]
mcpr = "0.2.3"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2.6"
pest_derive = "2.6"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
proptest = "1.6.0"
