[package]
name = "compute-mcp"
version = "0.1.0"
edition = "2021"
description = "🔮 Crystalline arithmetic MCP server"

[[bin]]
name = "stdio_direct"
path = "src/bin/stdio_direct.rs"

[dependencies]
mcpr = "0.2.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2.6"
pest_derive = "2.6"
lazy_static = "1.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
proptest = "1.6.0"
